--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react-dom": "^17.0.2",
     "react-popper": "^0.9.2",
     "react-redux": "^7.2.5",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
