--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.1.4",
     "font-awesome": "^4.7.0",
+    "json-server": "^0.17.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-popper": "^0.9.2",
     "react-redux": "^7.2.5",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
